<resources>
    <string name="app_name">MyPictureOfTheDay</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="screen_1">На экран 1</string>
    <string name="screen_2">На экран 2</string>
    <string name="main_theme">Основная тема</string>
    <string name="green_theme">Зеленая тема</string>
    <string name="red_theme">Красная тема</string>

</resources>