<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?fonColor"
    tools:context=".view.picture.PictureOfTheDayFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnMainTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_theme"
            android:textColor="?colorSecondary" />

        <RadioButton
            android:id="@+id/btnThemeGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_theme"
            android:textColor="?colorSecondary" />

        <RadioButton
            android:id="@+id/btnThemeRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_theme"
            android:textColor="?colorSecondary" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_wiki"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconDrawable="@drawable/ic_wikipedia"
        app:endIconMode="custom"
        app:helperText="@string/wiki_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.mypictureoftheday.utils.EquilateralImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/photo_of_the_day_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout"
        app:srcCompat="@drawable/ic_no_photo_vector" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/yesterday"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yesterday"
            android:textColor="@color/color_on_primary"
            app:chipBackgroundColor="?mainColor" />

        <com.google.android.material.chip.Chip
            android:id="@+id/today"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/color_on_primary"
            app:chipBackgroundColor="?mainColor" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="?mainColor"
        app:fabAlignmentMode="center"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_on_primary"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>